Fixed the mobile nav z-index, Tried implementing vote verification box

--- a/css/queries.css
+++ b/css/queries.css
@@ -48,6 +48,7 @@
 @media (max-width: 51em) {
   /* Mobile view */
   .main-nav {
+    z-index: 99999;
     background-color: rgba(255, 255, 255, 0.6);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
@@ -169,6 +170,11 @@
 /* *************************** */
 
 @media (max-width: 40em) {
+  /* HEADER */
+  .main-nav {
+    width: 30vh;
+  }
+
   .main-footer {
     flex-direction: column;
     align-items: center;
